Updated the overview, prettied tables

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -1,122 +1,75 @@
 schedule:
   enable : true
   title_overview : "Overview"
-  content_overview : "**TECHNICAL SESSIONS:  CONTRIBUTED TALKS AND POSTERS**
+  content_overview : |
+    ### Technical Sessions
+    #### (Contributed Talks)
+    
+    - Analytical Chemistry
+    - Biochemistry
+    - Chemical Education
+    - Inorganic Chemistry
+    - Macromolecular/Polymer Chemistry
+    - Medicinal/Pharmaceutical Chemistry
+    - Organic Chemistry
+    - Physical Chemistry   
+    - Theoretical, Computational, and Data-Driven Modeling Chemistry
 
-- Analytical Chemistry\n
-- Biochemistry\n
-- Chemical Education\n
-- Inorganic Chemistry\n
-- Macromolecular/Polymer Chemistry\n
-- Medicinal/Pharmaceutical Chemistry\n   
-- Organic Chemistry\n
-- Physical Chemistry\n   
-- Theoretical, Computational, and Data-Driven Modeling Chemistry\n"
-  content_invited : "**SPECIAL SYMPOSIA:  INVITED TALKS**  
+  content_invited  : |
+    ### Special Symposia
+    #### (Invited Talks)
+    {{< bootstrap-table "table table-striped table-sm" >}}
+    | Symposia                                                                                  |                                                      Chair(s) |
+    | :---------------------------------------------------------------------------------------- | ------------------------------------------------------------: |
+    | *Analytical Techniques in Environmental Chemistry*                                                                    |                      Kevin Tucker |
+    | *Beyond the Boundaries of Computational Chemistry and Catalysis*                                                      |                       Alex Mineko |
+    | *Bioprocess Chemistry*                                                                                                |                          Jie Dong |
+    | *Biotherapeutic Process Development and Manufacture in the Midwest*                                                   |                   Steve Kolodziej |
+    | *Carbohydrates & Glycosylations*                                                                                      |                   Cristina De Meo |
+    | *Chemical Theory Across Scales*                                                                                       | Kade Marsden-Head / Robert Wexler |
+    | *Dynamic Properties of Crystals*                                                                                      |                    Ryan Groeneman |
+    | *Electrochemistry*                                                                                                    |                         Mike Shaw |
+    | *Environmental Chemistry in Agriculture*                                                                              |                        Leah Riter |
+    | *Flow Chemistry*                                                                                                      |                        Todd Stark |
+    | *From Clear Flasks to Green Fields: Utilizing a Sustainability Mindset in Agrochemical Active Ingredient Development* |                    Justin Struble |
+    | *Innovative Analytical Measurements at the Micro and Nano Scale*                                                      |                      Scott Martin |
+    | *Medicinal Chemistry & Chemical Biology: Discovering New Biology and New Drugs Through Chemistry*                     |         Marv Meyers & Mike Crider |
+    | *Nucleic Acid Chemistry*                                                                                              |               John-Stephen Taylor |
+    | *Organic Reaction Mechanisms*                                                                                         |                            Yun Lu |
+    | *Process Development in Industry: Solving Problems*                                                                   |                    Michael Tracey |
+    | *Proteins and Lipids*                                                                                                 |                     James Bashkin |
+    | *Probing Biological Chemistry*                                                                                        |                      Michael Beck |
+    | *Organometallic Catalysis Research at PUIs*                                                                           |                   Jocelyn Lanorio |
+    | *Organometallic Chemistry of Earth-Abundant Transition Metals*                                                        |                       Jamie Neely |
+    | *Radiochemistry: From Radioactivity to Drug Product*                                                                  |                      Mike Nickels |
+    | *Safety in the Undergraduate Lab*                                                                                     |                      Sue Wiediger |
+    | *Solid State NMR for Industry, Medicine, and Academe*                                                                 |                      Sophia Hayes |
+    | *Synthesis and Characterization for Functional Polymeric Materials*                                                   |     Alexa Kuenstler / Whitney Loo |
+    | *To Flip or Not to Flip? How to Maintain Students' Attention Post-Pandemic*                                           |                     Jose Martinez |
+    {{< /bootstrap-table >}}
 
-1. Analytical Techniques in Environmental Chemistry
-Chair: Kevin Tucker (Southern Illinois University Edwardsville; [kevtuck@siue.edu](mailto:kevtuck@siue.edu))
-
-2. Beyond the Boundaries of Computational Chemistry and Catalysis
-Chair: Alex Mironenko (University of Illinois Urbana-Champaign; [alexmir@illinois.edu](mailto:alexmir@illinois.edu))
-
-3.	Bioprocess Chemistry
-Chair: Jie Dong (Southern Illinois University Edwardsville; [jdong@siue.edu](mailto:jdong@siue.edu))
-
-4.	Biotherapeutic Process Development and Manufacture in the Midwest
-Chair: Steve Kolodziej (Pfizer; [steve.a.kolodziej@pfizer.com](mailto:steve.a.kolodziej@pfizer.com))
-
-5.	Carbohydrates & Glycosylations
-Chair: Cristina De Meo (Southern Illinois University Edwardsville; [cdemeo@siue.edu](mailto:cdemeo@siue.edu))
-
-6.	Chemical Theory Across Scales
-Chairs: Kade Marsden-Head (Washington University in St. Louis; [head-marsden@wustl.edu](mailto:head-marsden@wustl.edu)), Robert Wexler (Washington University in St. Louis; [wexler@wustl.edu](mailto:wexler@wustl.edu))
-
-7.	Electrochemistry
-Chair: Mike Shaw (Southern Illinois University Edwardsville; [michsha@siue.edu](mailto:michsha@siue.edu))
-
-8.	Environmental Chemistry in Agriculture
-Chair: Leah Riter (Bayer; [leah.riter@bayer.com](mailto:leah.riter@bayer.com))
-
-9.	Flow Chemistry
-Chair: Todd Stark (API Innovation Center; [todd.m.stark@gmail.com](mailto:todd.m.stark@gmail.com))
-
-10.	From Clear Flasks to Green Fields: Utilizing a Sustainability Mindset in Agrochemical Active Ingredient Development
-Chair: Justin Struble (Bayer; [justin.struble@bayer.com](mailto:justin.struble@bayer.com))
-
-11.	Innovative Analytical Measurements at the Micro and Nano Scale
-Chair: Scott Martin (Saint Louis University; [scott.martin@slu.edu](mailto:scott.martin@slu.edu))
-
-12.	Nucleic Acids
-Chair: John-Stephen Taylor (Washington University in St. Louis; [taylor@wustl.edu](mailto:taylor@wustl.edu))
-
-13.	Organic Reaction Mechanisms
-Chair: Yun Lu (Southern Illinois University Edwardsville; [yulu@siue.edu](mailto:yulu@siue.edu))
-
-14.	Organic Solids
-Chair: Ryan Groeneman (Webster University; [ryangroeneman19@webster.edu](mailto:ryangroeneman19@webster.edu))
-
-15.	Organometallic Catalysis Research at PUIs
-Chair: Jocelyn Lanorio (Illinois College; [jocelyn.lanorio@ic.edu](mailto:jocelyn.lanorio@ic.edu))
-
-16.	Medicinal Chemistry & Chemical Biology: Discovering New Biology and New Drugs Through Chemistry
-Chairs: Marv Meyers (Saint Louis University; [marvin.j.meyers@slu.edu](mailto:marvin.j.meyers@slu.edu)), Mike Crider (Southern Illinois University Edwardsville; [mcrider@siue.edu](mailto:mcrider@siue.edu))
-
-17.	Process Development in Industry: Solving Problems
-Chair: Michael Tracey (Cambrex; [Michael.Tracey@CAMBREX.com](mailto:Michael.Tracey@CAMBREX.com))
-
-18.	Proteins and Lipids
-Chair: James Bashkin (University of Missouri – Saint Louis; [bashkinj@umsl.edu](mailto:bashkinj@umsl.edu))
-
-19.	Probing Biological Chemistry
-Chair: Michael Beck (Eastern Illinois University; [mbeck2@eiu.edu](mailto:mbeck2@eiu.edu))
-
-20.	Radiochemistry: From Radioactivity to Drug Product
-Chair: Mike Nickels (Washington University in St. Louis; [mnickels@wustl.edu](mailto:mnickels@wustl.edu))
-
-21.	Safety in the Undergraduate Lab
-Chair: Sue Wiediger (Southern Illinois University Edwardsville; [swiedig@siue.edu](mailto:swiedig@siue.edu))
-
-22.	Solid State NMR in Industry, Medicine and Academe
-Chair: Sophia Hayes (Washington University in St. Louis; [hayes@wustl.edu](mailto:hayes@wustl.edu))
-
-23.	Sustainable Transition Metal Catalysis
-Chair: Jamie Neely (Saint Louis University; [jamie.neely@slu.edu](mailto:jamie.neely@slu.edu))
-
-24.	Synthesis and Characterization for Functional Polymeric Materials
-Chairs: Alexa Kuenstler (University of Illinois Urbana-Champaign; [akuenstl@illinois.edu](mailto:akuenstl@illinois.edu)), Whitney Loo (University of Wisconsin-Madison; [wloo@wisc.edu](mailto:wloo@wisc.edu))
-
-25.	To Flip or Not to Flip? How to Maintain Students' Attention Post-Pandemic
-Chair: José Andino Martínez (University of Illinois Urbana-Champaign; [andinoma@illinois.edu](mailto:andinoma@illinois.edu))"
-  title_outline : "schedule"
-  title : "Schedule at a Glance"
-  schedule_tab:
-    ################# tab itam loop ################
+  schedule_tab : 
+  ################# tab itam loop ################
     - title : "Day 1"
       date_time : "Wednesday, Oct 18th"
       schedule_items:
         # schedule loop item
-        - time : "4:00pm"
+        - time : "afternoon"
           image : "images/about/startup.png"
           content : "
-          
           ### Startups
           "
         # schedule loop item
-        - time : "5:00pm"
+        - time : "evening"
           image : "images/about/ice_cream_social.png"
           content : "
-          
-          ### Undergraduate Program
-
-          ###### Ice Cream Social
+          ### Ice Cream Social\n
+          ###### Undergraduate Program
           "
         # schedule loop item
         - time : "evening"
           image : "images/about/flow_chemistry.png"
-          content : "
-          
-          ### Flow Chemistry
+          content : "### Exhibits Hall Opens
           "
           
 
@@ -126,152 +79,67 @@ Chair: José Andino Martínez (University of Illinois Urbana-Champaign; [andinom
       date_time : "Thursday, Oct 19th"
       schedule_items:
         # schedule loop item
-        - time : "all day"
-          image : "images/about/creativity.jpg"
-          content : "
-          
-          ### Organic Chemistry"
-        # schedule loop item
-        - time : "all day"
-          image : "images/about/creativity.jpg"
-          content : "
-          
-          ### Analytical Chemistry"
-        # schedule loop item
-        - time : "all day"
-          image : "images/about/creativity.jpg"
-          content : "
-          
-          ### Biochemistry"
-        # schedule loop item
-        - time : "all day"
-          image : "images/about/creativity.jpg"
-          content : "
-          
-          ### Organic Chemistry"
-        # schedule loop item
-        - time : "all day"
-          image : "images/about/creativity.jpg"
-          content : "
-          
-          ### Theoretical & Computational Chemistry"
-        # schedule loop item
         - time : "morning"
-          image : "images/about/wordpress.png"
+          image : "images/about/creativity.jpg"
           content : "
           
-          ### Analytical Chemistry in Micro and Nano
-
-          ###### Organized by S Martin"
-          
+          ### Career Panel"
         # schedule loop item
-        - time : "afternoon"
-          image : "images/about/big-data.png"
+        - time : "all day"
+          image : "images/about/creativity.jpg"
           content : "
           
-          ### Analytical for Environmental Sciences and Chemistry
-
-          ###### Organized by K Tucker"
+          ### Technical Sessions
           
+          #### & Special Symposia"
+        # schedule loop item
+        - time : "noon"
+          image : "images/about/creativity.jpg"
+          content : "
+          ### Luncheon
+          
+          #### Committee on Minority Affairs"
+        # schedule loop item
+        - time : "evening"
+          image : "images/about/creativity.jpg"
+          content : "
+          ### Midwest Award Reception
+          
+          #### Midwest/Great Lakes Region Banquet"
+
     ################# tab itam loop ################
     - title : "Day 3"
       date_time : "Friday, Oct 20th"
       schedule_items:
         # schedule loop item
-        - time : "9.00am"
-          image : "images/about/big-data.png"
+        - time : "morning"
+          image : "images/about/creativity.jpg"
           content : "
-          
-          ### Marketing Matters in design area
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-          
+          ### Midwest Regional Board Breakfast"
         # schedule loop item
-        - time : "9.00am"
-          image : "images/about/lunch.jpg"
-          content : "
-          
-          ### Launch Break
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-
-        # schedule loop item
-        - time : "9.00am"
-          image : "images/about/wordpress.png"
-          content : "
-          
-          ### Introduction of material Design
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-          
-        # schedule loop item
-        - time : "2.00pm"
+        - time : "all day"
           image : "images/about/creativity.jpg"
           content : "
           
-          ### Cultures of Creativity
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-          ################# tab itam loop ################
+          ### Technical Sessions
+          
+          #### & Special Symposia"
+        # schedule loop item
+        - time : "noon"
+          image : "images/about/creativity.jpg"
+          content : "
+          ### ACS Governance Lunch
+          
+          #### with ACS President Judy Giordan"
+    ################# tab itam loop ################
     - title : "Day 4"
       date_time : "Saturday, Oct 21st"
       schedule_items:
         # schedule loop item
-        - time : "9.00am"
+        - time : "morning"
           image : "images/about/big-data.png"
           content : "
-          
-          ### Marketing Matters in design area
+          ### Workshops and Symposia
 
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-          
-        # schedule loop item
-        - time : "9.00am"
-          image : "images/about/lunch.jpg"
-          content : "
-          
-          ### Launch Break
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-
-        # schedule loop item
-        - time : "9.00am"
-          image : "images/about/wordpress.png"
-          content : "
-          
-          ### Introduction of material Design
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
-          "
-          
-        # schedule loop item
-        - time : "2.00pm"
-          image : "images/about/creativity.jpg"
-          content : "
-          
-          ### Cultures of Creativity
-
-          ###### By Risabh moinul
-
-          Founder of themefisher
+          #### High School Teachers' Group
           "
