Making chair info consistent

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -33,7 +33,7 @@ schedule:
     | *Flow Chemistry*                                                                                                      |                        Todd Stark |
     | *From Clear Flasks to Green Fields: Utilizing a Sustainability Mindset in Agrochemical Active Ingredient Development* |                    Justin Struble |
     | *Innovative Analytical Measurements at the Micro and Nano Scale*                                                      |                      Scott Martin |
-    | *Medicinal Chemistry & Chemical Biology: Discovering New Biology and New Drugs Through Chemistry*                     |         Marv Meyers & Mike Crider |
+    | *Medicinal Chemistry & Chemical Biology: Discovering New Biology and New Drugs Through Chemistry*                     |         Marv Meyers / Mike Crider |
     | *Nucleic Acid Chemistry*                                                                                              |               John-Stephen Taylor |
     | *Organic Reaction Mechanisms*                                                                                         |                            Yun Lu |
     | *Process Development in Industry: Solving Problems*                                                                   |                    Michael Tracey |
