--- a/data/en/exposition.yml
+++ b/data/en/exposition.yml
@@ -3,20 +3,21 @@ exposition:
   enable : true
   #image : "images/bg/ctg.jpg"
   title : "Sponsor & Exhibitor **Information**"
-  content : "The 57th Midwest/50th Great Lakes Joint Regional Meeting of the American Chemical Society will be held in St Louis, October 18-21, 2023, at the St Charles Convention Center.
-  <br><br>
-  We expect over 1,000 chemical scientists and professionals to attend. Our outstanding line-up of technical programs and networking opportunities will attract chemists from industrial, academic and government laboratories, as well as high schools, medical schools and more.  
-  <br><br>
-  We have space for 50 exhibitors, and will share space with posters and food breaks, ensuring maximum exposure for your company. The cost will be $900 for a booth, which includes meeting registrations for two people.  A reduced price of $400 applies to academic exhibitors, but only one meeting registration is included. Expo locations will be assigned on a “first paid, first choice” basis.  If you want a prime location for your table, submit your payment as soon as possible. 
-  <br><br>
-  Sponsorships are available at four different levels or can be applied to specfic conference events. Specific sponsorship options are listed below.
-  <br><br>
-For more information on any of these opportunities contact Lisa Balbes at lisa@balbes.com. 
-<br><br>
-We look forward to working with you.  
-<br><br>
-Lisa Balbes, Expo Co-Chair, Industry
-<br> Serenity Desmond, Expo Co-Chair, Academia"
+  content : |
+    The 57th Midwest/50th Great Lakes Joint Regional Meeting of the American Chemical Society will be held in St Louis, October 18-21, 2023, at the St Charles Convention Center.  
+    
+    We expect over 1,000 chemical scientists and professionals to attend. Our outstanding line-up of technical programs and networking opportunities will attract chemists from industrial, academic and government laboratories, as well as high schools, medical schools and more.  
+    
+    We have space for 50 exhibitors, and will share space with posters and food breaks, ensuring maximum exposure for your company. The cost will be $900 for a booth, which includes meeting registrations for two people.  A reduced price of $400 applies to academic exhibitors, but only one meeting registration is included. Expo locations will be assigned on a “first paid, first choice” basis.  If you want a prime location for your table, submit your payment as soon as possible.  
+    
+    Sponsorships are available at four different levels or can be applied to specfic conference events. Specific sponsorship options are listed below.  
+    
+    For more information on any of these opportunities contact Lisa Balbes at [lisa@balbes.com](mailto:lisa@balbes.com). 
+    
+    We look forward to working with you.  
+    
+    Lisa Balbes, Expo Co-Chair, Industry  
+    Serenity Desmond, Expo Co-Chair, Academia  
 
 
 ################## sponsor opportunities #################################
@@ -24,33 +25,25 @@ sponsorop:
   enable : true
   #image : "images/bg/ctg.jpg"
   title : "Sponsorship **Opportunities**"
-  content : "**Flerovium Level ($10,000):** includes one free booth in the Expo, four free meeting registrations, acknoledgement in the meeting app and on signage on-site.
-  <br><br>
-  **Platinum Level ($5,000):** includes one free boooth in the Expo, two free meeting registrations, acknoledgement in the meeting app and on signage on-site.
-  <br><br>
-  **Gold Level ($3,500):** includes two free meeting registrations, acknowledgement in the meeting app and on signage on-site. 
-  <br><br> 
-  **Silver Level ($1,000):** includes acknowledgement in the meeting ap and on signage on-site.
-  <br><br>
-  **Individual Event Sponsorships**
-
-* Half-day technical symposium ($500) includes signage at that symposium
-
-* Full-day technical symposium ($1000) includes signage at that symposium
-
-* Wednesday night SciMix ($2,000) provides one drink ticket per person with your logo
-
-* Awards Banquet Reception ($1,000) provides one drink ticket per person with your logo
-
-* Coffee/snack break between sessions ($750) Wednesday pm, Thursday am or pm, Friday am or pm
-
-* Alumni reunions
-
-* Minority Affairs Reception
-
-* Diversity Luncheon
-
-* In Kind Donations/Giveaways such as key cards, water bottles, pens, bags, etc. can be included in attendee welcome bags or used as door prizes" 
+  content : |
+    **Flerovium Level ($10,000):** includes one free booth in the Expo, four free meeting registrations, acknoledgement in the meeting app and on signage on-site.
+  
+    **Platinum Level ($5,000):** includes one free boooth in the Expo, two free meeting registrations, acknoledgement in the meeting app and on signage on-site.
+  
+    **Gold Level ($3,500):** includes two free meeting registrations, acknowledgement in the meeting app and on signage on-site. 
+  
+    **Silver Level ($1,000):** includes acknowledgement in the meeting ap and on signage on-site.
+  
+    **Individual Event Sponsorships**  
+    * Half-day technical symposium ($500) includes signage at that symposium
+    * Full-day technical symposium ($1000) includes signage at that symposium
+    * Wednesday night SciMix ($2,000) provides one drink ticket per person with your logo
+    * Awards Banquet Reception ($1,000) provides one drink ticket per person with your logo
+    * Coffee/snack break between sessions ($750) Wednesday pm, Thursday am or pm, Friday am or pm
+    * Alumni reunions
+    * Minority Affairs Reception
+    * Diversity Luncheon
+    * In Kind Donations/Giveaways such as key cards, water bottles, pens, bags, etc. can be included in attendee welcome bags or used as door prizes" 
 
 ################## sponsor ###############################
 sponsor:
