Quick updates to schedule overview table text

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -40,12 +40,12 @@ schedule:
     | *Proteins and Lipids*                                                                                                 |                     James Bashkin |
     | *Probing Biological Chemistry*                                                                                        |                      Michael Beck |
     | *Organometallic Catalysis Research at PUIs*                                                                           |                   Jocelyn Lanorio |
-    | *Organometallic Chemistry of Earth-Abundant Transition Metals*                                                        |                       Jamie Neely |
     | *Radiochemistry: From Radioactivity to Drug Product*                                                                  |                      Mike Nickels |
     | *Safety in the Undergraduate Lab*                                                                                     |                      Sue Wiediger |
     | *Solid State NMR for Industry, Medicine, and Academe*                                                                 |                      Sophia Hayes |
+    | *Sustainable Transition Metal Catalysis*                                                                              |                       Jamie Neely |
     | *Synthesis and Characterization for Functional Polymeric Materials*                                                   |     Alexa Kuenstler / Whitney Loo |
-    | *To Flip or Not to Flip? How to Maintain Students' Attention Post-Pandemic*                                           |                     Jose Martinez |
+    | *To Flip or Not to Flip? How to Maintain Students' Attention Post-Pandemic*                                           |              Jose Andino Martinez |
     {{< /bootstrap-table >}}
 
   schedule_tab : 
