--- a/config.toml
+++ b/config.toml
@@ -104,7 +104,7 @@ author = "DrLabRatOry"
 # email address
 email = "exhibits@mwrm2023.org"
 # contact form action
-contact_form_action = "#" # contact form works with https://formspree.io
+contact_form_action = "https://formspree.io/f/jeramia.ory@gmail.com" # contact form works with https://formspree.io
 # Google Analitycs
 google_analitycs_id = "G-6V8SMMHHZY" # your id
 # search for blog page
