We know what day banquet is now

--- a/data/en/awards.yml
+++ b/data/en/awards.yml
@@ -2,7 +2,7 @@
 awards:
   title_outline : "Awards"
   title : "and Nomination Information"
-  content : "The date of the award banquet is TBD."
+  content : "The award banquet will be held on Thursday, October 19th. Details to follow."
   faq_item:
     # faq item loop
     - title : "Division of Chemical Education Region Awards for Excellence in High School Teaching"
