Update html to markdown for undergrad award

--- a/data/en/awards.yml
+++ b/data/en/awards.yml
@@ -70,38 +70,24 @@ awards:
         **[LINK](/MWRM2023_P3Award.pdf)** to download P3 Award forms. The P3 Award package should include: 
         - Completed Nomination Form describing the partnership, its activities, outcomes, and impact. 
         - Completed P3 Participating Partners Form from each of the participating partners. 
-        - A least one, but no more than three completed Supporter Forms."
+        - A least one, but no more than three completed Supporter Forms.
 
-      # faq item loop
+    # faq item loop
     - title : "Midwest Region Board’s Travel Award for Undergraduate Students "
-      content : "*Purpose* 
-      <br> The Midwest Regional Board of the American Chemical Society will have 5 travel awards to support undergraduate travel of up to $500 each. 
-      This program will support travel for undergraduates at schools in the MWRM area to the 2023 ACS MWRM meeting (MWRM/GLRM in St. Charles, MO) on 
-      Oct 18-21, 2023.
-
-      <br>
-      <br>*Nature*
-      <br> Institutions or local sections selected for the travel award will be reimbursed for the travel
-      expenses (up to $500 dollars per award) at the regional meeting. Receipts for student travel,
-      hotel and registration costs can be submitted for reimbursement at that time. Alternatively
-      registration/travel costs can be submitted electronically after the meeting to the MWRM Board
-      Award Chair.
-      <br>
-      <br>*Eligibility* 
-      <br>Local sections and primarily undergraduate institutions (PUI) can apply for these awards. 
-      <br>
-      <br>*Deadline*
-      <br>Nomination letters will be due on September 15. Announcements of the Awards will be made by September 20.
-      <br>
-      <br>*How to Apply*
-      <br>The nomination package consists of a nomination letter. The nomination letter should be sent to the MWRM 
-      Board Awards Chair. The nomination letter should list the students that will be traveling to the meeting, a 
-      budget, and a list of student presentations for the proposed meeting. The nomination letter should clearly identify 
-      the contact information for the nominator including name, institution, email and phone number. It is expected 
-      that each award will support multiple students. 
-      <br> 
-      <br>The nomination letters/receipts should be sent to:
-      <br>Dr. Jetty Duffy-Matzner
-      <br>MWRM Board Awards Chair
-      <br>jetty.duffy@augie.edu"
-
+      content : | 
+        *Purpose*  
+        The Midwest Regional Board of the American Chemical Society will have 5 travel awards to support undergraduate travel of up to $500 each. This program will support travel for undergraduates at schools in the MWRM area to the 2023 ACS MWRM meeting (MWRM/GLRM in St. Charles, MO) on Oct 18-21, 2023.
+        
+        *Nature*  
+        Institutions or local sections selected for the travel award will be reimbursed for the travel expenses (up to $500 dollars per award) at the regional meeting. Receipts for student travel, hotel and registration costs can be submitted for reimbursement at that time. Alternatively registration/travel costs can be submitted electronically after the meeting to the MWRM Board Award Chair. 
+        
+        *Eligibility*  
+        Local sections and primarily undergraduate institutions (PUI) can apply for these awards.
+        
+        *Deadline*  
+        Nomination letters will be due on September 15. Announcements of the Awards will be made by September 20.
+        
+        *How to Apply*  
+        The nomination package consists of a nomination letter. The nomination letter should be sent to the MWRM Board Awards Chair. The nomination letter should list the students that will be traveling to the meeting, a budget, and a list of student presentations for the proposed meeting. The nomination letter should clearly identify the contact information for the nominator including name, institution, email and phone number. It is expected that each award will support multiple students. 
+        
+        The nomination letters/receipts should be sent to: Dr. Jetty Duffy-Matzner, MWRM Board Awards Chair at jetty.duffy@augie.edu
