--- a/data/en/pricing.yml
+++ b/data/en/pricing.yml
@@ -15,23 +15,43 @@ pricing:
     # pricing table loop
     - title : "Prices"
       style : "1"
-      price : "ACS Member"
+      price : "Premium ACS Member"
       #icon : "tf-ion-android-bulb"
       bg_image : "images/bg/page-header.jpg"
       services:
-        - "Professional $100-$120"
-        - "Undergraduate Student $30-$40"
-        - "Graduate Student $30-$40"
-        - "Post-doctoral fellow $50-$60"
-        - "Community College Faculty $40-$50"
-        - "K-12 Teacher $25"
-        - "50-year ACS Member $0"
-        - "Retired/Emeritus/Unemployed $0"
-        - "Spouse/Guest $20-$30"
+        - "Professional "
+        - "Undergraduate Student "
+        - "Graduate Student "
+        - "Post-doctoral fellow "
+        - "Community College Faculty "
+        - "K-12 Teacher "
+        - "50-year ACS Member "
+        - "Retired/Emeritus/Unemployed "
+        - "Spouse/Guest "
       button:
         label : "Get now"
         link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
-        
+
+    # pricing table loop
+    - title : "Prices"
+      style : "1"
+      price : "Standard ACS Member"
+      #icon : "tf-ion-android-bulb"
+      bg_image : "images/bg/page-header.jpg"
+      services:
+        - "Professional "
+        - "Undergraduate Student "
+        - "Graduate Student "
+        - "Post-doctoral fellow "
+        - "Community College Faculty "
+        - "K-12 Teacher "
+        - "50-year ACS Member "
+        - "Retired/Emeritus/Unemployed "
+        - "Spouse/Guest "
+      button:
+        label : "Get now"
+        link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
+
     # pricing table loop
     - title : "Prices"
       style : "2"
@@ -39,14 +59,14 @@ pricing:
       #icon : "tf-ion-android-hangout"
       bg_image : "images/bg/page-header.jpg"
       services:
-        - "Professional $120-$140"
-        - "Undergraduate Student $35-$45"
-        - "Graduate Student $35-$45"
-        - "Post-doctoral fellow $75-$85"
-        - "Community College Faculty $50-$60"
-        - "K-12 Teacher $25"
-        - "High School Student $10"
-        - "Spouse/Guest $20-$30"
+        - "Professional "
+        - "Undergraduate Student "
+        - "Graduate Student "
+        - "Post-doctoral fellow "
+        - "Community College Faculty "
+        - "K-12 Teacher "
+        - "High School Student "
+        - "Spouse/Guest "
       button:
         label : "Get now"
         link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
