converted email address to mailto link

--- a/data/en/awards.yml
+++ b/data/en/awards.yml
@@ -90,4 +90,4 @@ awards:
         *How to Apply*  
         The nomination package consists of a nomination letter. The nomination letter should be sent to the MWRM Board Awards Chair. The nomination letter should list the students that will be traveling to the meeting, a budget, and a list of student presentations for the proposed meeting. The nomination letter should clearly identify the contact information for the nominator including name, institution, email and phone number. It is expected that each award will support multiple students. 
         
-        The nomination letters/receipts should be sent to: Dr. Jetty Duffy-Matzner, MWRM Board Awards Chair at jetty.duffy@augie.edu
+        The nomination letters/receipts should be sent to: Dr. Jetty Duffy-Matzner, MWRM Board Awards Chair at [jetty.duffy@augie.edu](mailto:jetty.duffy@augie.edu)
