--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -127,8 +127,8 @@ schedule:
         # schedule loop item
         - time : "noon"
           image : "images/about/governance_luncheon_icon.png"
-          content : "
-          ### ACS Coaching and Mentoring Lunch
+          content : |
+            ### ACS Coaching and Mentoring Lunch
     ################# tab itam loop ################
     - title : "Day 4"
       date_time : "Saturday, Oct 21st"
