Name fix in Special Symposia

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -22,7 +22,7 @@ schedule:
     | Symposia                                                                                  |                                                      Chair(s) |
     | :---------------------------------------------------------------------------------------- | ------------------------------------------------------------: |
     | *Analytical Techniques in Environmental Chemistry*                                                                    |                      Kevin Tucker |
-    | *Beyond the Boundaries of Computational Chemistry and Catalysis*                                                      |                       Alex Mineko |
+    | *Beyond the Boundaries of Computational Chemistry and Catalysis*                                                      |                    Alex Mironenko |
     | *Bioprocess Chemistry*                                                                                                |                          Jie Dong |
     | *Biotherapeutic Process Development and Manufacture in the Midwest*                                                   |                   Steve Kolodziej |
     | *Carbohydrates & Glycosylations*                                                                                      |                   Cristina De Meo |
