Name update & Fee table update

--- a/data/en/schedule.yml
+++ b/data/en/schedule.yml
@@ -26,7 +26,7 @@ schedule:
     | *Bioprocess Chemistry*                                                                                                |                          Jie Dong |
     | *Biotherapeutic Process Development and Manufacture in the Midwest*                                                   |                   Steve Kolodziej |
     | *Carbohydrates & Glycosylations*                                                                                      |                   Cristina De Meo |
-    | *Chemical Theory Across Scales*                                                                                       | Kade Marsden-Head / Robert Wexler |
+    | *Chemical Theory Across Scales*                                                                                       | Kade Head-Marsden / Robert Wexler |
     | *Dynamic Properties of Crystals*                                                                                      |                    Ryan Groeneman |
     | *Electrochemistry*                                                                                                    |                         Mike Shaw |
     | *Environmental Chemistry in Agriculture*                                                                              |                        Leah Riter |
