--- a/data/en/pricing.yml
+++ b/data/en/pricing.yml
@@ -9,25 +9,25 @@ timer:
 pricing:
   enable : true
   title_outline : "Price"
-  title : "Register early for the discounted rate"
+  title : "Register by Sept. 15 for the discounted rate"
   #content : "Register early for the discounted rate"
   pricing_table:
     # pricing table loop
     - title : "Prices"
       style : "1"
-      price : "Premium ACS Member"
+      price : "ACS Member"
       #icon : "tf-ion-android-bulb"
       bg_image : "images/bg/page-header.jpg"
       services:
-        - "Professional "
-        - "Undergraduate Student "
-        - "Graduate Student "
-        - "Post-doctoral fellow "
-        - "Community College Faculty "
-        - "K-12 Teacher "
-        - "50-year ACS Member "
-        - "Retired/Emeritus/Unemployed "
-        - "Spouse/Guest "
+        - "General $120/$145"
+        - "Graduate Student $30/$40"
+        - "Undergraduate Student $30/$40"
+        - "Post-doctoral fellow $30/$40"
+        - "K-12 Teacher $10/$20"
+        - "High School Student $5/$5"
+        - "50-year ACS Member $0/$0"
+        - "Retired/Emeritus/Unemployed $30/$40"
+        - "Guest $40/$40"
       button:
         label : "Get now"
         link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
@@ -35,41 +35,40 @@ pricing:
     # pricing table loop
     - title : "Prices"
       style : "1"
-      price : "Standard ACS Member"
+      price : "Non-ACS Member"
       #icon : "tf-ion-android-bulb"
       bg_image : "images/bg/page-header.jpg"
       services:
-        - "Professional "
-        - "Undergraduate Student "
-        - "Graduate Student "
-        - "Post-doctoral fellow "
-        - "Community College Faculty "
-        - "K-12 Teacher "
-        - "50-year ACS Member "
-        - "Retired/Emeritus/Unemployed "
-        - "Spouse/Guest "
+        - "General $175/$200"
+        - "Graduate Student $40/$50"
+        - "Undergraduate Student $40/$50"
+        - "Post-doctoral fellow $40/$50"
+        - "K-12 Teacher $10/$20"
+        - "High School Student $5/$5"
+        - "Retired/Emeritus/Unemployed $30/$40"
+        - "Guest $40/$40"
       button:
         label : "Get now"
         link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
 
     # pricing table loop
-    - title : "Prices"
-      style : "2"
-      price : "Non-ACS Member"
+    #- title : "Prices"
+      #style : "2"
+      #price : "Non-ACS Member"
       #icon : "tf-ion-android-hangout"
-      bg_image : "images/bg/page-header.jpg"
-      services:
-        - "Professional "
-        - "Undergraduate Student "
-        - "Graduate Student "
-        - "Post-doctoral fellow "
-        - "Community College Faculty "
-        - "K-12 Teacher "
-        - "High School Student "
-        - "Spouse/Guest "
-      button:
-        label : "Get now"
-        link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
+      #bg_image : "images/bg/page-header.jpg"
+      #services:
+        #- "Professional "
+        #- "Undergraduate Student "
+        #- "Graduate Student "
+        #- "Post-doctoral fellow "
+        #- "Community College Faculty "
+       # - "K-12 Teacher "
+        #- "High School Student "
+        #- "Spouse/Guest "
+      #button:
+        #label : "Get now"
+        #link : "https://www.acs.org/meetings/regional/midwest.html#:~:text=The%202023%20Joint%20Midwest%20%E2%80%93%20Great,Illinois%20Sections%20of%20the%20ACS."
         
         
 ############################## Event ##############################
